[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-stretch"
version = "0.1.0"
description = "Stretch linear astro data for easier visualization."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Tim Beccue", email = "timothybeccue@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
]
keywords = ["astronomy", "astrophotography", "image-processing", "pixinsight", "stretch", "fits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/LCOGT/auto_stretch"
Repository = "https://github.com/LCOGT/auto_stretch"
Issues = "https://github.com/LCOGT/auto_stretch/issues"
Changelog = "https://github.com/LCOGT/auto_stretch/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
